# Robomaster

./: README.md
task1/苹果/: CMakeLists.txt  apple_detection.cpp
task1/魔方/: CMakeLists.txt  main.cpp
task2/: CMakeLists.txt  README.md  main.cpp  text.cpp
task3/: CMakeLists.txt  main.cpp
校赛/: CMakeLists.txt  main.cpp  设计思路.txt
视觉组新生答题/: FileName.cpp  视觉组新生答题.sln  视觉组新生答题.vcxproj
