cmake_minimum_required(VERSION 3.15)
project (main)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(main main.cpp)
target_link_libraries(main ${OpenCV_LIBS})
add_executable(1 1.cpp)
target_link_libraries(1 ${OpenCV_LIBS})